# Polyframe

./: CMakeLists.txt  README.md  abc_test.py  meta_test.py  pyproject.toml  test2.py  test_speed.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_publish.yml  publish.yml
cpp/: CMakeLists.txt  bindings.cpp
cpp/include/: frame_convention.hpp  rigid_transform.hpp
examples/: test.py
polyframe/: __init__.py  _polyframe.py  affine_matrix.py  base_transform.py  direction.py  geometry.py  local_transform.py  polyframe.py  transform.py  transform_factory.py  utils.py
polyframe2/: affine_matrix.py  creation.py  local_transform.py  math.py
src/include/: frame_convention.hpp  local_transform.hpp  rigid_transform.hpp
src/polyframe/: __init__.py  bindings.cpp
tests/: _test_polyframe.py  test_codegen.py  test_creation.py  test_dunders.py  test_extras.py  test_polyframe.py  test_setters.py  test_to_target.py  test_transformations.py
