[project]
name = "polyframe"
version = "0.1.0"
description = "A modern python library for 3D homogenous transforms and coordinate system utilities."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Nathan Spencer", email = "nathanss1997@gmail.com" }
]
dependencies = [
    "numpy"
]
keywords = ["rigid transform", "geometry", "transform", "3d", "coordinate systems", "pose", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[build-system]
requires = ["scikit-build-core>=0.2.0", "nanobind", "numpy"]
build-backend = "scikit_build_core.build"

[tool.setuptools.packages.find]
include = ["src/polyframe*"]

[tool.scikit-build]
wheel.exclude = [
    "polyframe/*.cpp",
    "polyframe/__pycache__",
]



[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''